--- a/Emis/Emis/Info.plist
+++ b/Emis/Emis/Info.plist
@@ -19,5 +19,10 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIColorName</key>
+		<string>standard-color-component-solid500</string>
+	</dict>
 </dict>
 </plist>
